--- a/presentation_report/thesis/chapter04.Rnw
+++ b/presentation_report/thesis/chapter04.Rnw
@@ -13,45 +13,47 @@ opts_chunk$set(
 
 \chapter{Discussion}
 
-
-As the first focus of this thesis, we applied TRAM-DAGs as a flexible neural network-based approach to model causal relationships in a known directed acyclic graph (DAG). The second focus was on the estimation of individualized treatment effects (ITEs) in both randomized and confounded settings. We answered our research questions by conducting a dedicated experiment for each.
+The first focus of this thesis was the application of TRAM-DAGs, a flexible neural network-based approach, to model causal relationships given a known directed acyclic graph (DAG). The second focus was on the estimation of individualized treatment effects (ITEs) in both randomized and confounded settings. We addressed our research questions through a dedicated experiment for each.
 
 \section{Findings}
 
 \medskip
 
-Experiment 1 (Chapter~\ref{ch:exp1}) served as a proof of concept, demonstrating that a TRAM-DAG can be fitted on simulated data from a known causal structure and used to sample from observational, interventional, and counterfactual distributions. Our results showed that the causal relationships could be recovered from the data, and that queries from all three levels of Pearl's causal hierarchy could be accurately answered. We also gave advice on how to handle ordinal and categorical predictors (Appendix~\ref{sec:encoding_discrete_variables}), how variable scaling affects the interpretation of coefficients (Appendix~\ref{sec:scaling_continuous_variables}), and how interactions between variables can be modeled (Appendix~\ref{sec:complex_shift}).
+Experiment 1 (Section~\ref{ch:exp1}) served as a proof of concept, demonstrating that a TRAM-DAG can be fitted to simulated data generated from a known causal structure and used to sample from observational, interventional, and counterfactual distributions. Our results showed that the causal relationships could be recovered from the data, and that queries at all three levels of Pearl's causal hierarchy could be answered accurately. We also gave advice on how to handle ordinal and categorical predictors (Appendix~\ref{sec:encoding_discrete_variables}), how variable scaling affects the interpretation of coefficients (Appendix~\ref{sec:scaling_continuous_variables}), and how variable interactions can be modeled (Appendix~\ref{sec:complex_shift}).
 
 \medskip
 
-Experiment 2 (Chapter~\ref{ch:exp2}) focused on the estimation of ITEs on the real dataset of the International Stroke Trial (IST). We tested whether we would reach the same conclusion as \citet{chen2025} -- that causal ML models fail to estimate ITEs that generalize to unseen data. We applied models based on logistic regression, random forest (with hyperparameter tuning), and TRAM-DAGs (with complex intercept to allow for interactions). The results showed that none of the three models produced ITE estimates that generalized to the independent test set. The observed treatment effect was not significant across any of the estimated ITE groups (i.e., when patients were grouped according to predicted ITEs). This motivated a deeper investigation into the possible reasons for poor model performance, which we addressed in Experiment 3.
+Experiment 2 (Section~\ref{ch:exp2}) focused on the estimation of ITEs on the real-world dataset of the International Stroke Trial (IST). We tested whether we would reach the same conclusion as \citet{chen2025} -- that causal ML models fail to estimate ITEs that generalize to unseen data. We applied models based on logistic regression, random forest (with hyperparameter tuning), and TRAM-DAGs (with complex intercept to model interactions). The results showed that none of the three models produced ITE estimates that generalized to the independent test set. The observed treatment effect was not significant across any of the estimated ITE groups (i.e., when patients were grouped according to predicted ITEs). This motivated a deeper investigation into the possible reasons for poor model performance, which we addressed in Experiment 3.
 
 \medskip
 
-Experiment 3 (Chapter~\ref{ch:experiment3}) aimed to analyze the reasons for the poor ITE estimation performance observed in Experiment 2. We presented results for a logistic regression model (matching the DGP) and a tuned random forest, applied to ITE estimation in three simulated RCT scenarios. In the first scenario -- the ideal case with a fully observed DAG and strong interaction effects -- both models accurately recovered the true ITEs. However, as we demonstrated in Appendix~\ref{sec:default_rf_ite}, a default (untuned) random forest can perform poorly due to overfitting and miscalibration. In the second scenario, we found that omitting an important effect modifier led to biased ITE estimates; only a portion of the true heterogeneity was detected. In the third scenario, where true treatment effect heterogeneity was low, both models overestimated the heterogeneity. However, when validated on the test set, the ITEs did not generalize and no clear variation in treatment effects was observed. These results illustrate that when test set validation suggests no heterogeneity, it may be unclear whether the reason is a missing effect modifier or truly low treatment effect variation. Notably, in both cases, the identifiability assumptions are not violated. Either of these scenarios could potentially explain the limited ITE performance on the IST dataset.
+Experiment 3 (Section~\ref{ch:experiment3}) aimed to analyze the reasons for the poor ITE estimation performance observed in Experiment~2 (Section~\ref{ch:exp2}). We presented results for a logistic regression model (matching the data-generating process, DGP) and a tuned random forest, applied to ITE estimation in three simulated RCT scenarios.
+In the first scenario -- the ideal case with a fully observed DAG and strong interaction effects -- both models accurately recovered the true ITEs. However, as demonstrated in Appendix~\ref{sec:default_rf_ite}, a default (untuned) random forest can perform poorly due to overfitting and miscalibration.
+In the second scenario, we found that omitting an important effect modifier led to biased ITE estimates; only a portion of the true heterogeneity was detected. The ITE-ATE plot might still suggest good calibration of ITEs in the training and test sets; however, this may be misleading, as some individuals may still receive the wrong estimated ITE sign (see Figure~\ref{fig:unobserved_interaction_glm_tlearner}).
+In the third scenario, where true treatment effect heterogeneity was low, both models overestimated heterogeneity. However, when validated on the test set, the estimated ITEs did not generalize, and no clear variation in treatment effects was observed. These results illustrate that when test set validation suggests no heterogeneity, it may be unclear whether this is due to an unobserved effect modifier or truly low treatment effect variation. Notably, in both cases, the identifiability assumptions are not violated. Both issues may help explain the limited ITE performance observed in the IST dataset.
 
 \medskip
 
-Experiment 4 (Chapter~\ref{ch:exp4}) aimed to demonstrate that TRAM-DAGs can be applied for ITE estimation in a confounded, relatively complex DAG, provided that the full DAG is observed. We concluded that TRAM-DAGs, with their ability to estimate causal relationships and model interactions between variables, yielded unbiased ITE estimates when interaction effects were present -- in both confounded and randomized settings. In the case where no explicit treatment-covariate interaction was modeled in the DGP, we still observed some heterogeneity, which was attributable to the nonlinearity of the DGP and the TRAM-DAG model.
+Experiment~4 (Section~\ref{ch:exp4}) aimed to demonstrate that TRAM-DAGs can be applied for ITE estimation in a confounded, relatively complex DAG, provided that the full DAG is observed. We concluded that TRAM-DAGs, with their ability to estimate causal relationships and model interactions between variables, yielded unbiased ITE estimates when interaction effects were present, both in the confounded and randomized settings. In the case where no explicit treatment-covariate interactions were included in the DGP, we still observed some heterogeneity, which was attributable to nonlinearities in the outcome model.
 
 
 
 \section{Limitations}
 
-Despite the promising results, this work has several limitations. While we aimed to make the simulation scenarios as realistic as possible while still retaining some interpretability, they may not fully reflect the complexity of real-world data. However, applying and evaluating models like TRAM-DAGs on real data for causal questions such as ITE estimation is inherently difficult, as the true effects are usually unknown. TRAM-DAGs rely on neural networks, which can be computationally demanding depending on model complexity and dataset size. And although TRAM-DAGs offer flexibility, we must still make modeling assumptions -- for instance, regarding the scale of conditional effects -- if interpretability is to be preserved.
+Despite the promising results, this work has several limitations. While we aimed to make the simulation scenarios as realistic as possible while still retaining some interpretability, they may not fully reflect the complexity of real-world data. However, applying and evaluating models like TRAM-DAGs on real data for causal questions such as ITE estimation is inherently difficult, as the true effects are usually unknown. TRAM-DAGs rely on neural networks, which can be computationally demanding depending on model complexity and dataset size. While TRAM-DAGs offer flexibility, they still require modeling assumptions -- for instance, regarding the scale of conditional effects -- if interpretability is to be preserved.
 
 
 
 \section{Conclusion}
 
 
-Our findings showed that TRAM-DAGs were able to successfully recover causal relationships when the DAG was fully known and all relevant variables were observed. They also performed well for ITE estimation in controlled simulation settings. Through a series of experiments, we investigated the limitations of ITE estimation and concluded that poor performance may occur when important effect modifiers are unmeasured or when true treatment effect heterogeneity is low. These factors may help explain why ITE estimation failed to generalize in the real-world application on the International Stroke Trial dataset. We also observed that proper calibration of causal machine learning models is important to achieve accurate ITE estimates, though calibration alone may not be sufficient for valid individual-level predictions.
+Our findings showed that TRAM-DAGs were able to successfully recover causal relationships when the DAG was fully known and all relevant variables were observed. They also performed well for ITE estimation in controlled simulation settings. Through a series of experiments, we investigated the limitations of ITE estimation and concluded that poor performance may occur when important effect modifiers are unmeasured or when true treatment effect heterogeneity is low. These factors may help explain why ITE estimation failed to generalize in the real-world application on the IST dataset. We also observed that proper calibration of causal machine learning models' potential outcome predictions is important to achieve accurate ITE estimates, though calibration alone may not be sufficient for valid ITE predictions.
 
 TRAM-DAGs, as generative causal models, allow for sampling from observational, interventional, and counterfactual distributions when fitted to a known DAG. Their ability to combine flexible neural network components with interpretable structure makes them well suited for real-world applications where both predictive accuracy and transparency are important.
 
 Future work could apply TRAM-DAGs to additional real-world datasets, potentially including semi-structured data, to further explore the advantages of their modular design. It would also be valuable to investigate methods for improving ITE estimation in the presence of unobserved effect modifiers.
 
-Overall, this thesis contributes to the growing field of causal inference in both observational and experimental settings, with a particular focus on individualized treatment effects and the capabilities of neural causal models.
+Overall, this thesis contributes to the growing field of causal inference in both observational and experimental settings, with a particular focus on ITEs and the capabilities of neural causal models.
 
 % 
 % Our findings included that TRAM-DAGs were able to successfully recover structural equations when the DAG was fully known and all variables were observed. They also worked well for ITE estimation in simulation settings. The simulation experiments further revealed limitations in ITE estimation, especially in the presence of unobserved effect modifiers. We concluded that unmeasured effect-modifying variables pose a significant challenge and that the ignorability assumption alone may not be enough to ensure unbiased estimates. This or weak treatment effect heterogeneity might explain why ITE estimation failed in the real-world application on the International Stroke Trial. We also found that proper calibration of causal machine learning models is important to achieve accurate ITE estimates but that calibration alone may not be sufficient for valid predictions.
